# Radar-camera-fusion

./: .gitignore  .gitmodules  README.md  radar_cam_orin.yaml  radar_cam_windows.yaml
algorithm/: convert_to_onnx.ipynb  dataset_nuscenes.ipynb  dataset_nuscenes.py  loss.py  model.py  plotting.py  sample_inference.ipynb  test_nuscenes.ipynb  train_nuscenes.ipynb
inference/: CMakeLists.txt
inference/include/inference/: aux_functions.hpp
inference/libs/nn_handler_lib/: CMakeLists.txt  package.xml
inference/libs/nn_handler_lib/include/nn_handler_lib/: nn_handler.hpp
inference/libs/nn_handler_lib/src/: nn_handler.cpp
inference/libs/tensorrt_cpp_api/: CMakeLists.txt  package.xml
inference/libs/tensorrt_cpp_api/include/tensorrt_cpp_api/: engine.h
inference/libs/tensorrt_cpp_api/src/: engine.cpp
inference/src/: inference_cpu.cpp  inference_gpu.cpp  main.cpp
models/: model_2024-06-20_15-22-48_epoch4.onnx  model_2024-06-21_23-46-23_epoch8.onnx
prepare_dataset/: 1_train_test_split.ipynb  2_im_save.ipynb  3_cam_matrix_save.ipynb  4_radar_save.ipynb  5_lidar_save.ipynb  6_relative_depth_save.ipynb
test_data/: 00000_lidar_pc.txt  00000_radar_pc.txt  00100_lidar_pc.txt  00100_radar_pc.txt  00200_cam_matrix.txt  00200_lidar_pc.txt  00200_radar_pc.txt  00300_cam_matrix.txt  00300_lidar_pc.txt  00300_radar_pc.txt  00400_lidar_pc.txt  00400_radar_pc.txt  save_cam_matrix_txt.py  save_pc_txt.py
