<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nn_handler_lib</name>
  <version>0.0.0</version>
  <description>This package is a handler for NNs using the TensorRT API</description>
  <maintainer email="rafael-jose.escarabajal-sanchez@capgemini.com">Rafael Escarabajal Sanchez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>tensorrt_cpp_api</build_depend>

  <exec_depend>tensorrt_cpp_api</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
